Minor changes with outcommented code (will be removed later if not used)